[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/ruudkassing/twinnterface"
issues = "https://github.com/ruudkassing/twinnterface/issues"
discussions = "https://github.com/ruudkassing/twinnterface/discussions"

[project]
name = "twinnterface"
version = "0.0.1"
description = "Machine learning model contracts with machine learning infrastructure"
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools]
packages.find.include = ["twinnterface*"]
dynamic.version.attr = "twinnterface._version.__version__"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
